--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.2",
   "description": "Vue directive to observe intersection of an element with viewport.",
   "main": "dist/vue-intersect-directive.js",
-  "module": "dist/vue-intersect-directive.js",
+  "module": "dist/vue-intersect-directive.esm.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/megurock/vue-intersect-directive.git"
@@ -11,7 +11,10 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "rollup -w -c -m inline",
-    "build": "rollup -c --sourcemapExcludeSources --compact",
+    "build": "npm run build:iife && npm run build:esm && npm run build:umd", 
+    "build:iife": "rollup -c build/rollup.config.iife.js",
+    "build:esm": "rollup -c build/rollup.config.esm.js",
+    "build:umd": "rollup -c build/rollup.config.umd.js",
     "prepublish": "npm run build",
     "lint": "tslint --project . --fix"
   },
