--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Vue directive to observe intersection of an element with viewport.",
   "main": "dist/vue-intersect-directive.js",
   "module": "dist/vue-intersect-directive.esm.js",
+  "unpkg": "dist/vue-intersect-directive.min.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/megurock/vue-intersect-directive.git"
   },
   "scripts": {
     "start": "npm run dev",
-    "dev": "rollup -w -c -m inline",
+    "dev": "rollup  -c build/rollup.config.iife.js -w",
     "build": "npm run build:iife && npm run build:esm && npm run build:umd",
     "build:iife": "rollup -c build/rollup.config.iife.js",
     "build:esm": "rollup -c build/rollup.config.esm.js",
