--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "moduleResolution": "node",
     "strict": true,
     "baseUrl": ".",
-    "declaration": true
+    "declaration": true,
+    "declarationDir": "dist"
   }
 }
