--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "rollup-plugin-typescript": "^1.0.1",
     "tslint": "^5.19.0",
     "typescript": "^3.5.3"
+  },
+  "dependencies": {
+    "user": "0.0.0"
   }
 }
